--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.6.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'jacoco'
 }
 
-group = 'com.kapumota'
+group = 'com.sergei270791'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -20,4 +21,14 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.2
+			}
+		}
+	}
 }
